--- a/gitops/argo-apps/base/zitadel.yaml
+++ b/gitops/argo-apps/base/zitadel.yaml
@@ -36,20 +36,30 @@ spec:
       plugin:
         name: envsubst
         env:
-          - name: "zitadel_release_name"
-            value: "${ARGOCD_ENV_security_zitadel_app_name}"
 
           - name: "zitadel_namespace"
             value: "${ARGOCD_ENV_security_zitadel_namespace}"
-
-          - name: "zitadel_helm_version"
-            value: "${ARGOCD_ENV_security_zitadel_helm_version}"
 
           - name: "zitadel_istio_gateway_namespace"
             value: "${ARGOCD_ENV_security_zitadel_istio_gateway_namespace}"
 
           - name: "zitadel_istio_wildcard_gateway_name"
             value: "${ARGOCD_ENV_security_zitadel_istio_wildcard_gateway_name}"
+
+          - name: "zitadel_dns_subdomain"
+            value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
+
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
+      path: gitops/applications/overlays/rdbms_provider/${ARGOCD_ENV_security_zitadel_rdbms_provider}/zitadel
+      plugin:
+        name: envsubst
+        env:  
+          - name: "zitadel_helm_version"
+            value: "${ARGOCD_ENV_security_zitadel_helm_version}"
+
+          - name: "zitadel_namespace"
+            value: "${ARGOCD_ENV_security_zitadel_namespace}"
 
           - name: "zitadel_dns_subdomain"
             value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
@@ -63,11 +73,6 @@ spec:
           - name: "zitadel_db_name"
             value: "${ARGOCD_ENV_security_zitadel_zitadel_db_name}"
 
-          - name: "zitadel_db_user"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_user}"
-
-          - name: "zitadel_pg_db_release_name"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_pg_db_release_name}"
-
           - name: "zitadel_config_secret_name"
-            value: "${ARGOCD_ENV_security_zitadel_config_secret_name}"
+            value: "${ARGOCD_ENV_security_zitadel_config_secret_name}"            
+
