--- a/gitops/argo-apps/overlays/local/security/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/security/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 
 resources:
   - ../../../base/zitadel-pre.yaml
-  - ../../../base/zitadel-helm.yaml
+  - ../../../base/zitadel.yaml
   - ../../../base/zitadel-post-config.yaml
   #- ../../../base/netbird.yaml
