--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -163,6 +163,7 @@ ceph_bucket_max_size: "10Gi"
 env_token_ttl: "14d"
 
 # Zitadel
+zitadel_replicas: "'2'"
 zitadel_postgres_rdbms_provider: "percona"
 zitadel_postgres_instance_size: "small"
 zitadel_postgres_storage_size: "20Gi"
