zitadel prep stmts

--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -271,7 +271,7 @@ spec:
             value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_externalservice_name}"
 
           - name: max_prepared_statements
-            value: "'0'"                       
+            value: "0"                       
 
     #praefect db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
@@ -356,4 +356,4 @@ spec:
             value: "${ARGOCD_ENV_gitlab_gitlab_praefect_externalservice_name}"
 
           - name: max_prepared_statements
-            value: "'0'"                    
+            value: "0"                    
