--- a/gitops/argo-apps/base/zitadel-pre.yaml
+++ b/gitops/argo-apps/base/zitadel-pre.yaml
@@ -194,4 +194,4 @@ spec:
             value: "${ARGOCD_ENV_security_zitadel_externalservice_name}"
 
           - name: max_prepared_statements
-            value: "'1'"    
+            value: "1"    
