--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -112,11 +112,13 @@ storeGateway:
     size: ${ARGOCD_ENV_mimir_store_gateway_storage_size}
 
 ruler:
-  enabled: true	
+  enabled: true
+  replicaCount: ${ARGOCD_ENV_mimir_ruler_replica_count}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}  
 
 alertmanager:
   enabled: true
+  replicaCount: ${ARGOCD_ENV_mimir_alertmanager_replica_count}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name} 
