--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -93,6 +93,8 @@ mimir_querier_replica_count: "'2'"
 mimir_query_frontend_replica_count: "'1'"
 mimir_compactor_replica_count: "'1'"
 mimir_store_gateway_replica_count: "'3'"
+mimir_ruler_replica_count: "'2'"
+mimir_alertmanager_replica_count: "'2'"
 mimir_ingester_storage_size: "30Gi"
 mimir_compactor_storage_size: "30Gi"
 mimir_store_gateway_storage_size: "30Gi"
