--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -93,23 +93,28 @@ mimir_querier_replica_count: "'2'"
 mimir_query_frontend_replica_count: "'1'"
 mimir_compactor_replica_count: "'1'"
 mimir_store_gateway_replica_count: "'3'"
-mimir_ruler_replica_count: "'2'"
-mimir_alertmanager_replica_count: "'2'"
+mimir_ruler_replica_count: "'1'"
+mimir_alertmanager_replica_count: "'1'"
 mimir_ingester_storage_size: "30Gi"
 mimir_compactor_storage_size: "30Gi"
 mimir_store_gateway_storage_size: "30Gi"
-mimir_distributor_limits_cpu: "1000m"
-mimir_distributor_limits_memory: "3Gi"
+mimir_alertmanager_storage_size: "10Gi"
+mimir_distributor_limits_cpu: "500m"
+mimir_distributor_limits_memory: "256Mi"
 mimir_ingester_limits_cpu: "1500m"
-mimir_ingester_limits_memory: "6Gi"
+mimir_ingester_limits_memory: "8Gi"
 mimir_querier_limits_cpu: "1000m"
-mimir_querier_limits_memory: "3Gi"
-mimir_query_frontend_limits_cpu: "1000m"
-mimir_query_frontend_limits_memory: "3Gi"
+mimir_querier_limits_memory: "4Gi"
+mimir_query_frontend_limits_cpu: "200m"
+mimir_query_frontend_limits_memory: "512Mi"
 mimir_compactor_limits_cpu: "1500m"
 mimir_compactor_limits_memory: "3Gi"
-mimir_store_gateway_limits_cpu: "1000m"
-mimir_store_gateway_limits_memory: "3Gi"
+mimir_store_gateway_limits_cpu: "200m"
+mimir_store_gateway_limits_memory: "1Gi"
+mimir_ruler_limits_cpu: "1000m"
+mimir_ruler_limits_memory: "2Gi"
+mimir_alertmanager_limits_cpu: "100m"
+mimir_alertmanager_limits_memory: "512Mi"
 
 gitlab_helm_version: "8.1.2"
 gitlab_public_access: true
