--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -18,7 +18,7 @@ resources:
   - dashboards-prometheus.yaml
   - dashboards-rook-ceph.yaml
   - istio-crs.yaml
-  - mimir-alertmanager-secrets.yaml
+  - mimir-alertmanager.yaml
   - mimirtool-cronjob.yaml
   - rook-ceph-objectstore-exporter.yaml
 
