--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -104,8 +104,8 @@ storeGateway:
   replicaCount: ${ARGOCD_ENV_mimir_store_gateway_replica_count}
   resources:
     limits:
-      cpu: ${ARGOCD_ENV_mimir_querier_limits_cpu}
-      memory: ${ARGOCD_ENV_mimir_querier_limits_memory}
+      cpu: ${ARGOCD_ENV_mimir_store_gateway_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_store_gateway_limits_memory}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
   persistence:
@@ -114,11 +114,21 @@ storeGateway:
 ruler:
   enabled: true
   replicaCount: ${ARGOCD_ENV_mimir_ruler_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_mimir_ruler_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_ruler_limits_memory}  
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}  
 
 alertmanager:
   enabled: true
   replicaCount: ${ARGOCD_ENV_mimir_alertmanager_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}  
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name} 
+  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
+  persistence:
+    size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
