--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -47,6 +47,12 @@ spec:
       jsonPointers:
         - /spec/volumeClaimTemplates/0/kind
         - /spec/volumeClaimTemplates/0/apiVersion
+    - group: apps
+      kind: StatefulSet
+      name: "central-monitoring-grafana-mimir-alertmanager"
+      jsonPointers:
+        - /spec/volumeClaimTemplates/0/kind
+        - /spec/volumeClaimTemplates/0/apiVersion
     - group: monitoring.coreos.com
       kind: ServiceMonitor
       jsonPointers:
@@ -136,6 +142,8 @@ spec:
           value: "${ARGOCD_ENV_monitoring_mimir_compactor_storage_size}"
         - name: "mimir_store_gateway_storage_size"
           value: "${ARGOCD_ENV_monitoring_mimir_store_gateway_storage_size}"
+        - name: "mimir_alertmanager_storage_size"
+          value: "${ARGOCD_ENV_monitoring_mimir_alertmanager_storage_size}"
 
         - name: "mimir_distributor_limits_cpu"
           value: "${ARGOCD_ENV_monitoring_mimir_distributor_limits_cpu}"
@@ -161,6 +169,14 @@ spec:
           value: "${ARGOCD_ENV_monitoring_mimir_store_gateway_limits_cpu}"
         - name: "mimir_store_gateway_limits_memory"
           value: "${ARGOCD_ENV_monitoring_mimir_store_gateway_limits_memory}"
+        - name: "mimir_ruler_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_ruler_limits_cpu}"
+        - name: "mimir_ruler_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_ruler_limits_memory}"
+        - name: "mimir_alertmanager_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_alertmanager_limits_cpu}"
+        - name: "mimir_alertmanager_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_alertmanager_limits_memory}"
 
         - name: "cloudwatch_exporter_role_arn"
           value: "${ARGOCD_ENV_monitoring_monitoring_cloudwatch_exporter_role_arn}"
