zitadel db changes

--- a/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: PasswordPolicy
 metadata:
-  name: rdsdb-password-policy
+  name: ${ARGOCD_ENV_dbdeploy_name_prefix}-rds-password-policy
   namespace: ${ARGOCD_ENV_vault_namespace}
 spec:
   # Add fields here
@@ -32,7 +32,7 @@ spec:
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: RandomSecret
 metadata:
-  name: rdsdb-password
+  name: ${ARGOCD_ENV_dbdeploy_name_prefix}-rds-password
   namespace: ${ARGOCD_ENV_vault_namespace}
 spec:
   authentication:
@@ -44,7 +44,7 @@ spec:
   path: /secret/data/${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}
   secretKey: password
   secretFormat:
-    passwordPolicyName: rdsdb-password-policy
+    passwordPolicyName: ${ARGOCD_ENV_dbdeploy_name_prefix}-rds-password-policy
 ---
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: VaultSecret
@@ -60,7 +60,7 @@ spec:
         serviceAccount:
           name: default
       name: dynamicsecret_db_password
-      path: /secret/data/${ARGOCD_ENV_dbdeploy_name_prefix}/rdsdb-password
+      path: /secret/data/${ARGOCD_ENV_dbdeploy_name_prefix}/${ARGOCD_ENV_dbdeploy_name_prefix}-rds-password
   output:
     name: ${ARGOCD_ENV_db_secret}
     stringData:
