zitadel db path

--- a/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
@@ -41,7 +41,7 @@ spec:
     serviceAccount:
       name: default
   isKVSecretsEngineV2: true
-  path: /secret/data/${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}
+  path: /secret/data/${ARGOCD_ENV_dbdeploy_name_prefix}/${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}
   secretKey: password
   secretFormat:
     passwordPolicyName: ${ARGOCD_ENV_dbdeploy_name_prefix}-rds-password-policy
