secret data path

--- a/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
@@ -60,7 +60,7 @@ spec:
         serviceAccount:
           name: default
       name: dynamicsecret_db_password
-      path: /secret/data/${ARGOCD_ENV_dbdeploy_name_prefix}/${ARGOCD_ENV_dbdeploy_name_prefix}-rds-password
+      path: /secret/data/${ARGOCD_ENV_dbdeploy_name_prefix}/${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}/${ARGOCD_ENV_dbdeploy_name_prefix}-rds-password
   output:
     name: ${ARGOCD_ENV_db_secret}
     stringData:
