--- a/gitops/applications/overlays/rdbms_provider/cockroach/zitadel-pre/kustomization.yaml
+++ b/gitops/applications/overlays/rdbms_provider/cockroach/zitadel-pre/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - zitadel-config-secrets.yaml
+  - zitadel-cert-jobs.yaml
 
 helmCharts:
   - name: cockroachdb
