Don't force resource limits

--- a/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
@@ -100,12 +100,12 @@ cephClusterSpec:
                   values:
                     - rook-ceph-osd-prepare
       # OSD daemon limits
-      resources:
-        limits:
-          memory: "4Gi"
-        requests:
-          cpu: "500m"
-          memory: "4Gi"
+      # resources:
+      #   limits:
+      #     memory: "4Gi"
+      #   requests:
+      #     cpu: "500m"
+      #     memory: "4Gi"
       volumeClaimTemplates:
       - metadata:
           name: data
