--- a/gitops/applications/base/base-monitoring/kustomization.yaml
+++ b/gitops/applications/base/base-monitoring/kustomization.yaml
@@ -19,4 +19,4 @@ helmCharts:
     repo: https://kubernetes-sigs.github.io/metrics-server
     valuesFile: values-metrics-server.yaml
     namespace: ${ARGOCD_ENV_monitoring_namespace}
-    version: 3.12.2
+    version: ${ARGOCD_ENV_metrics_server_helm_version}
