fix missing sc for block

--- a/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
@@ -159,7 +159,9 @@ cephBlockPools:
      replicated:
        size: 3
    storageClass:
+     enabled: true
      isDefault: true
+     name: ceph-block
      reclaimPolicy: Delete
      allowVolumeExpansion: true
      volumeBindingMode: "Immediate"
