--- a/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
@@ -124,6 +124,7 @@ cephClusterSpec:
   #    requests:
   #      cpu: "200m"
   #      memory: "200Mi"
+  # priority classes to apply to ceph resource
   priorityClassNames:
     # If there are multiple nodes available in a failure domain (e.g. zones), the
     # mons and osds can be portable and set the system-cluster-critical priority class.
@@ -137,33 +138,65 @@ cephClusterSpec:
 
 # CephObjectStore configurations
 cephObjectStores:
- - name: ceph-objectstore
-   spec:
-     metadataPool:
-       replicated:
-         size: 3
-   storageClass:
-     enabled: true
-     name: ceph-bucket
-     reclaimPolicy: Delete
-     volumeBindingMode: "Immediate"
-     parameters:
-       region: "${ARGOCD_ENV_rook_ceph_object_store_region}"
-   ingress:
-     enabled: false
+  - name: ceph-objectstore
+    # see https://github.com/rook/rook/blob/master/Documentation/CRDs/Object-Storage/ceph-object-store-crd.md#object-store-settings for available configuration
+    spec:
+      metadataPool:
+        failureDomain: host
+        replicated:
+          size: 3
+      dataPool:
+        failureDomain: host
+      preservePoolsOnDelete: true
+    storageClass:
+      enabled: true
+      name: ceph-bucket
+      reclaimPolicy: Delete
+      volumeBindingMode: "Immediate"
+      parameters:
+        # note: objectStoreNamespace and objectStoreName are configured by the chart
+        region: "${ARGOCD_ENV_rook_ceph_object_store_region}"
+    ingress:
+      # Enable an ingress for the ceph-objectstore
+      enabled: false
 
-#Ceph Block Pools configurations
+# -- A list of CephBlockPool configurations to deploy
+# @default -- See [below](#ceph-block-pools)
 cephBlockPools:
- - name: ceph-blockpool
-   spec:
-     replicated:
-       size: 3
-   storageClass:
-     enabled: true
-     isDefault: true
-     name: ceph-block
-     reclaimPolicy: Delete
-     allowVolumeExpansion: true
-     volumeBindingMode: "Immediate"
-     parameters:
-       csi.storage.k8s.io/fstype: ext4
+  - name: ceph-blockpool
+    # see https://github.com/rook/rook/blob/master/Documentation/CRDs/Block-Storage/ceph-block-pool-crd.md#spec for available configuration
+    spec:
+      failureDomain: host
+      replicated:
+        size: 3
+      # Enables collecting RBD per-image IO statistics by enabling dynamic OSD performance counters. Defaults to false.
+      # For reference: https://docs.ceph.com/docs/latest/mgr/prometheus/#rbd-io-statistics
+      # enableRBDStats: true
+    storageClass:
+      enabled: true
+      name: ceph-block
+      isDefault: true
+      reclaimPolicy: Delete
+      allowVolumeExpansion: true
+      volumeBindingMode: "Immediate"
+      parameters:
+        imageFormat: "2"
+        # These secrets contain Ceph admin credentials.
+        csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
+        csi.storage.k8s.io/controller-expand-secret-name: rook-csi-rbd-provisioner
+        csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
+        csi.storage.k8s.io/fstype: ext4
+
+# -- Settings for the filesystem snapshot class
+cephFileSystemVolumeSnapshotClass:
+  enabled: false
+  name: ceph-filesystem
+  isDefault: true
+  deletionPolicy: Delete
+
+# -- Settings for the block pool snapshot class
+cephBlockPoolsVolumeSnapshotClass:
+  enabled: false
+  name: ceph-block
+  isDefault: false
+  deletionPolicy: Delete
