--- a/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/ceph_volumes_provider/ebs/rook-ceph-cluster-values.yaml
@@ -153,7 +153,7 @@ cephObjectStores:
       preservePoolsOnDelete: true
       gateway:
         port: 80
-        securePort: 443
+        # securePort: 443
         instances: 1
     storageClass:
       enabled: true
