ebs csi related updates

--- a/gitops/applications/overlays/ceph_volumes_provider/ebs/aws-ebs-csi-driver-values.yaml
+++ b/gitops/applications/overlays/ceph_volumes_provider/ebs/aws-ebs-csi-driver-values.yaml
@@ -22,7 +22,7 @@ sidecars:
       allowPrivilegeEscalation: false
 
 node:
-  kubeletPath: ${kubelet_dir_path}
+  kubeletPath: "${ARGOCD_ENV_kubelet_dir_path}"
   securityContext:
     runAsNonRoot: false
 controller:
