--- a/gitops/applications/overlays/ceph_volumes_provider/ebs/kustomization.yaml
+++ b/gitops/applications/overlays/ceph_volumes_provider/ebs/kustomization.yaml
@@ -8,6 +8,7 @@ helmCharts:
     releaseName: aws-ebs-csi-driver
     repo: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
     namespace: kube-system
+    valuesFile: aws-ebs-csi-driver-values.yaml
 
   - name: rook-ceph-cluster
     releaseName: rook-ceph-cluster
