--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -52,7 +52,7 @@ spec:
 
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
-      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_cloud_provider}/rook-ceph
+      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_cloud_provider}/rook-ceph/${ARGOCD_ENV_utils_rook_ceph_volumes_provider}
       plugin:
         name: envsubst
         env:
