cluster domain and region updates

--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/ebs/aws-ebs-csi-driver-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/ebs/aws-ebs-csi-driver-values.yaml
@@ -35,5 +35,5 @@ controller:
     enabled: false
   env: []
   extraVolumeTags:
-    Name: Rook-EBS-Volumes
+    Name: "rook-volume-${ARGOCD_ENV_cluster_domain}"
   enableMetrics: false
