--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/ebs/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/ebs/rook-ceph-cluster-values.yaml
@@ -39,66 +39,72 @@ cephClusterSpec:
     allowDeviceClassUpdate: false # whether to allow changing the device class of an OSD after it is created
     allowOsdCrushWeightUpdate: true # whether to allow resizing the OSD crush weight after osd pvc is increased
     storageClassDeviceSets:
-    - name: set1
+    - name: ebs-set1
       # The number of OSDs to create from this device set
       count: ${ARGOCD_ENV_ceph_osd_count}
       portable: true
       encrypted: false
       tuneDeviceClass: true
       tuneFastDeviceClass: false
-      # # Topology spread constraints
-      # placement:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #         - matchExpressions:
-      #             - key: topology.kubernetes.io/zone
-      #               operator: Exists
-      #   topologySpreadConstraints:
-      #     - maxSkew: 1
-      #       #topologyKey: kubernetes.io/hostname
-      #       #whenUnsatisfiable:  ScheduleAnyway
-      #       topologyKey: topology.kubernetes.io/zone
-      #       whenUnsatisfiable: DoNotSchedule
-      #       labelSelector:
-      #         matchExpressions:
-      #           - key: app
-      #             operator: In
-      #             values:
-      #               - rook-ceph-osd
-      # preparePlacement:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #         - matchExpressions:
-      #             - key: topology.kubernetes.io/zone
-      #               operator: Exists
-      #   podAntiAffinity:
-      #     preferredDuringSchedulingIgnoredDuringExecution:
-      #       - weight: 100
-      #         podAffinityTerm:
-      #           labelSelector:
-      #             matchExpressions:
-      #               - key: app
-      #                 operator: In
-      #                 values:
-      #                   - rook-ceph-osd
-      #               - key: app
-      #                 operator: In
-      #                 values:
-      #                   - rook-ceph-osd-prepare
-      #           topologyKey: kubernetes.io/hostname
-      #   topologySpreadConstraints:
-      #     - maxSkew: 1
-      #       #topologyKey: kubernetes.io/hostname
-      #       topologyKey: topology.kubernetes.io/zone
-      #       whenUnsatisfiable: DoNotSchedule
-      #       labelSelector:
-      #         matchExpressions:
-      #           - key: app
-      #             operator: In
-      #             values:
-      #               - rook-ceph-osd-prepare
+      # Topology spread constraints
+      placement:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: topology.kubernetes.io/zone
+                    operator: In
+                      - "${ARGOCD_ENV_ceph_osd_count}a"
+                      - "${ARGOCD_ENV_ceph_osd_count}b"
+                      - "${ARGOCD_ENV_ceph_osd_count}c"
+        topologySpreadConstraints:
+          - maxSkew: 1
+            #topologyKey: kubernetes.io/hostname
+            #whenUnsatisfiable:  ScheduleAnyway
+            topologyKey: topology.kubernetes.io/zone
+            whenUnsatisfiable: DoNotSchedule
+            labelSelector:
+              matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                    - rook-ceph-osd
+      preparePlacement:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: topology.kubernetes.io/zone
+                    operator: In
+                      - "${ARGOCD_ENV_cloud_region}a"
+                      - "${ARGOCD_ENV_cloud_region}b"
+                      - "${ARGOCD_ENV_cloud_region}c"
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: app
+                      operator: In
+                      values:
+                        - rook-ceph-osd
+                    - key: app
+                      operator: In
+                      values:
+                        - rook-ceph-osd-prepare
+                topologyKey: kubernetes.io/hostname
+        topologySpreadConstraints:
+          - maxSkew: 1
+            #topologyKey: kubernetes.io/hostname
+            topologyKey: topology.kubernetes.io/zone
+            whenUnsatisfiable: DoNotSchedule
+            labelSelector:
+              matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                    - rook-ceph-osd-prepare
       # OSD daemon limits
       # resources:
       #   limits:
@@ -118,7 +124,7 @@ cephClusterSpec:
           accessModes:
             - ReadWriteOnce
     # when onlyApplyOSDPlacement is false, will merge both placement.All() and storageClassDeviceSets.Placement.
-    #onlyApplyOSDPlacement: false
+    onlyApplyOSDPlacement: false
   resources:
   #  prepareosd:
   #    requests:
