--- a/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
+++ b/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
@@ -3,19 +3,12 @@ groups:
   - name: storage
     interval: 30s # TODO: update this after development
     rules:
-      # - alert: test7
-      #   expr: label_replace(vector(1), "instance", "10.128.0.152:15014", "", "") > 0
-      #   for: 0m
-      #   labels:
-      #     severity: warning
-      #   annotations:
-      #     summary: |
-      #       "This is test alert with \n labels: {{ $labels }} \n external labels: {{ $externalLabels }} \n value: {{ $value }}"
-      - alert: PrometheusTargetMissing3
-        expr: up{job="monitoring/alertmanager"}==1
+      - alert: LowDiskSpace # TODO: fix the name
+        expr: ((node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 80 and ON (instance, device, mountpoint) node_filesystem_readonly == 0) * on(instance) group_left (nodename) node_uname_info{nodename=~".+"}
+        # for: 2m
         for: 0m
         labels:
-          severity: critical
+          severity: warning
         annotations:
-          summary: Prometheus target missing (instance {{ $labels.instance }})
-          description: "A Prometheus target has disappeared. An exporter might be crashed.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"            
+          summary: Host out of disk space (instance {{ $labels.instance }})
+          description: "Disk is almost full (< 10% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
