--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -126,9 +126,12 @@ alertmanager:
   replicaCount: ${ARGOCD_ENV_mimir_alertmanager_replica_count}
   resources:
     limits:
-      cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
-      memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}  
+      # cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
+      # memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}  
+      cpu: "100m"
+      memory: "256Mi"        
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
   persistence:
-    size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
+    # size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
+    size: "30Gi"
