--- a/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
+++ b/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
@@ -4,11 +4,11 @@ groups:
     interval: 30s # TODO: update this after development
     rules:
       - alert: LowDiskSpace # TODO: fix the name
-        expr: ((node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 80 and ON (instance, device, mountpoint) node_filesystem_readonly == 0) * on(instance) group_left (nodename) node_uname_info{nodename=~".+"}
+        expr: ((node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 93 and ON (instance, device, mountpoint) node_filesystem_readonly == 0) * on(instance) group_left (nodename) node_uname_info{nodename=~".+"}
         # for: 2m
         for: 0m
         labels:
           severity: warning
         annotations:
-          summary: Host out of disk space (instance {{ $labels.instance }})
-          description: "Disk is almost full (< 10% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+          summary: "LowDiskSpace (<20%). instance={{ $labels.nodename }}, mountpoint={{ $labels.mountpoint }}"
+          description: "Disk is almost full (< 20% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
