reduce sample count
add opsgenie config only for testing

test PVC alert

update

--- a/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
+++ b/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
@@ -3,12 +3,19 @@ groups:
   - name: storage
     interval: 30s # TODO: update this after development
     rules:
-      - alert: LowDiskSpace # TODO: fix the name
-        expr: ((node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 93 and ON (instance, device, mountpoint) node_filesystem_readonly == 0) * on(instance) group_left (nodename) node_uname_info{nodename=~".+"}
-        # for: 2m
-        for: 0m
+      - alert: LowDiskSpace 
+        expr: ((node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 20 and ON (instance, device, mountpoint) node_filesystem_readonly == 0) * on(instance) group_left (nodename) node_uname_info{nodename=~".+"}
+        for: 2m
         labels:
           severity: warning
         annotations:
           summary: "LowDiskSpace (<20%). instance={{ $labels.nodename }}, mountpoint={{ $labels.mountpoint }}"
           description: "Disk is almost full (< 20% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      - alert: KubernetesVolumeOutOfDiskSpace
+        expr: kubelet_volume_stats_available_bytes / kubelet_volume_stats_capacity_bytes * 100 < 20
+        for: 2m
+        labels:
+          severity: warning
+        annotations:
+          summary: Low PVC space left (<20%).  persistentvolumeclaim={{ $labels.persistentvolumeclaim }}
+          description: "Volume is almost full (< 20% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
