--- a/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
+++ b/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
@@ -84,7 +84,7 @@ spec:
         config.yaml: |
           route:
             # Main alert routing configuration
-            receiver: 'slack'
+            receiver: ${ARGOCD_ENV_argocd_namespace}
             group_by: ['cluster', 'job', 'alertname']
             group_wait: 30s
             group_interval: 5m
